            - New routine isNormalEdgeLink().
            - New routine removeOcts().
            - Routine cutAlong() can now work with almost normal surfaces
              (i.e., it can now handle octagons).
        Class Packet:
            - Renamed insertChildFirst(), insertChildLast() and
              insertChildAfter() to prepend(), append() and insert().
              The old names have been kept as deprecated aliases.
        Class Perm<n>:
            - New routines for tight encodings and decodings.
        Type safe_tuple_element<...>:
            - New type alias that is like std::tuple_element<...> but
              with well-defined behaviour for an out-of-range index.
        Class SnaPeaTriangulation:
            - The Link constructor now throws an exception if the link is so
              large that SnapPea cannot handle it.
        Class TreeTraversal<...>, TreeEnumeration<...>, TautEnumeration<...>,
                TreeSingleSoln<...>:
            - Now supports ban constraints whose class constructors require
              additional arguments.  These additional arguments are passed to
              the TreeEnumeration/TautEnumeration/TreeSingleSoln constructor.
        Struct TightEncodable<T>:
            - New base class for classes that support tight encodings
              and decodings.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
            - New routine pairing().
            - New routines for tight encodings and decodings.
            - New routine translate().
            - The join() routine now checks all its preconditions, and
              throws an exception if any precondition fails.
        Class Triangulation<3>:
            - New routines isHandlebody() and knowsHandlebody(), thanks to